# groxpi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.minio.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: README.md  benchmark.sh
benchmarks/docker/: docker-compose.benchmark.yml
benchmarks/docker/uv/: Dockerfile  docker-compose.uv.yml  pyproject.proxpi.toml  pyproject.toml
benchmarks/scripts/: analyze_results_duckdb.sh  api-benchmark.sh  cache_manager.sh  download-benchmark.sh  monitor_resources.sh  run-all.sh  uv_install_test.sh  wrk_api_test.sh
cmd/groxpi/: integration_test.go  main.go  main_test.go
docs/: api-endpoints.md  benchmarking-analysis.md  benchmarking-api.md  benchmarking-packages.md  benchmarking-setup.md  benchmarking-troubleshooting.md  benchmarking.md  configuration.md  deployment.md  github-workflows.md  implemented-features.md  migration.md  monitoring.md  performance.md  testing.md
internal/: benchmark_test.go
internal/cache/: file.go  file_test.go  index.go  index_test.go  response.go  response_test.go
internal/config/: config.go  config_test.go
internal/logger/: logger.go  logger_test.go
internal/pypi/: client.go  client_extended_test.go  client_test.go  json_bench_test.go
internal/server/: download_bench_test.go  download_coordinator_test.go  server.go  (+2 more)
monitoring/: prometheus.yml
templates/: files.html  home.html  index.html  packages.html  simple_index.html
tests/: results.md  uv_s3_integration_test.sh
(+28 files in other folders)
