[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-test"
version = "0.1.0"
description = "Benchmark testing project for groxpi vs proxpi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

# Index configuration for proxpi
[[tool.uv.index]]
name = "proxpi"
url = "http://<index_endpoint>/simple/"
default = true